# docker-images

./: LICENSE
blackarch/: .gitignore  Makefile  README.md  docker-compose.yaml
blackarch/blackarch/: Dockerfile
classical/: docker-compose.yaml
email/: Makefile  docker-compose.yaml
email/email/: Dockerfile
irc/: Makefile  README.md  docker-compose.yaml
irc/ircd/: Dockerfile  ngircd.conf  ngircd.motd
irc/terminal/: Dockerfile
jenkins/: .gitignore  Makefile  docker-compose.yaml
jenkins/gitserver/: Dockerfile
jenkins/gitserver/sample_repos/jsbuildtestc.git/refs/heads/: master
jenkins/gitweb/: Dockerfile  gitweb.conf
jenkins/jsdebian/: Dockerfile  docker-compose.yaml
jenkins/jsdebian/src/jsbuildtestc/src/: jsbuildtestcappprefs.c  jsbuildtestcappwin.h  window.ui
jenkins/jsfedora/: Dockerfile  Makefile  docker-compose.yaml
jenkins/jsfedora/src/jsbuildtestc/: Makefile.am  delfiles.pl  instfiles.pl  setup64-nsis.sh  zipwin.pl
jenkins/jsfedora/src/jsbuildtestc/src/: jsbuildtestc.gresource.xml
jenkins/repos/jsbuildbasicc.git/refs/heads/: master
jenkins/repos/jsbuildtestcxx.git/refs/heads/: master
jenkins/shell/: Dockerfile  docker-entrypoint.sh
jenkins/src/jsbuildbasicc/: configure.ac
jenkins/src/jsbuildbasicc/src/: Makefile.am  jsbuildbasicc.c  jsbuildbasicc.h  winprog.rc
jenkins/src/jsbuildtestc/: configure.ac
jenkins/src/jsbuildtestc/src/: Makefile.am  jsbuildtestc.gschema.xml  prefs.ui
jenkins/src/jsbuildtestcxx/: Makefile.am  configure.ac  jsbuildtestcxx.cc
jsdebian/: Dockerfile  Makefile  docker-compose.yaml
jsdebian/src/jsbuildbasicc/: Makefile.am
jsdebian/src/jsbuildtestc/: setup64.nsi.in
jsdebian/src/jsbuildtestc/src/: jsbuildtestc.h  jsbuildtestcappwin.c
jsfedora/: Dockerfile  Makefile  authorized_keys  docker-compose.yaml
jsfedora/src/jsbuildtestc/src/: jsbuildtestc.c
native_dev/: .gitignore  Makefile  docker-compose.yaml
native_dev/jsdebian/: Dockerfile
native_dev/jsfedora/: Dockerfile
native_dev/shell/: Dockerfile
nativedev/: Makefile  docker-compose.yaml
nativedev/gitserver/: Dockerfile
nativedev/jsfedora/: Dockerfile
nativedev/shell/: Dockerfile
nativedev/terminal_debian/: Dockerfile
nativedev/terminal_fedora/: Dockerfile
routing/: .gitignore  Makefile  docker-compose.yaml
routing/plain/: Dockerfile
routing/terminal/: Dockerfile  docker-entrypoint.sh
src/jsbuildtestc/src/: app-menu.ui  jsbuildtestcapp.c  jsbuildtestcappprefs.h
www_stateful/: Makefile  docker-compose.yaml
www_stateful/www_stateful/: Dockerfile
www_stateless/: Makefile  docker-compose.yaml
www_stateless/www_stateless/: Dockerfile
