AC_INIT([jsbuildtestcxx], [0.1.0], [opalraava@riseup.net], [], [https://github.com/opalraava/jsbuildtestcxx/])
AC_CONFIG_SRCDIR(jsbuildtestcxx.cc)
AC_PREREQ(2.59)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_PROG_CXX
AC_LANG([C++])
AX_CXX_COMPILE_STDCXX_11




AC_CONFIG_FILES(Makefile)
AC_OUTPUT
